Migrate to NeoForge