@@ -5,9 +5,9 @@ import net.minecraft.world.phys.AABB;
 import net.minecraft.world.level.LevelAccessor;
 import net.minecraft.world.entity.LivingEntity;
 import net.minecraft.world.entity.Entity;
+import net.minecraft.world.damagesource.DamageTypes;
 import net.minecraft.world.damagesource.DamageSource;
 
-import java.util.stream.Collectors;
 import java.util.List;
 import java.util.Comparator;
 
@@ -18,38 +18,35 @@ public class FireScepterProjectileHitsLivingEntityProcedure {
 		Entity user = null;
 		user = sourceentity;
 		if (!(entity == user)) {
-			entity.hurt(DamageSource.ON_FIRE, 4);
-			entity.setSecondsOnFire(10);
+			entity.hurt(new DamageSource(world.holderOrThrow(DamageTypes.ON_FIRE)), 4);
+			entity.igniteForSeconds(10);
 			{
 				final Vec3 _center = new Vec3(x, y, z);
-				List<Entity> _entfound = world.getEntitiesOfClass(Entity.class, new AABB(_center, _center).inflate(4 / 2d), e -> true).stream().sorted(Comparator.comparingDouble(_entcnd -> _entcnd.distanceToSqr(_center)))
-						.collect(Collectors.toList());
+				List<Entity> _entfound = world.getEntitiesOfClass(Entity.class, new AABB(_center, _center).inflate(4 / 2d), e -> true).stream().sorted(Comparator.comparingDouble(_entcnd -> _entcnd.distanceToSqr(_center))).toList();
 				for (Entity entityiterator : _entfound) {
 					if (!(entityiterator == user) && entityiterator instanceof LivingEntity) {
-						entityiterator.hurt(DamageSource.ON_FIRE, 1);
-						entityiterator.setSecondsOnFire(3);
+						entityiterator.hurt(new DamageSource(world.holderOrThrow(DamageTypes.ON_FIRE)), 1);
+						entityiterator.igniteForSeconds(3);
 					}
 				}
 			}
 			{
 				final Vec3 _center = new Vec3(x, y, z);
-				List<Entity> _entfound = world.getEntitiesOfClass(Entity.class, new AABB(_center, _center).inflate(3 / 2d), e -> true).stream().sorted(Comparator.comparingDouble(_entcnd -> _entcnd.distanceToSqr(_center)))
-						.collect(Collectors.toList());
+				List<Entity> _entfound = world.getEntitiesOfClass(Entity.class, new AABB(_center, _center).inflate(3 / 2d), e -> true).stream().sorted(Comparator.comparingDouble(_entcnd -> _entcnd.distanceToSqr(_center))).toList();
 				for (Entity entityiterator : _entfound) {
 					if (!(entityiterator == user) && entityiterator instanceof LivingEntity) {
-						entityiterator.hurt(DamageSource.ON_FIRE, 2);
-						entityiterator.setSecondsOnFire(6);
+						entityiterator.hurt(new DamageSource(world.holderOrThrow(DamageTypes.ON_FIRE)), 2);
+						entityiterator.igniteForSeconds(6);
 					}
 				}
 			}
 			{
 				final Vec3 _center = new Vec3(x, y, z);
-				List<Entity> _entfound = world.getEntitiesOfClass(Entity.class, new AABB(_center, _center).inflate(2 / 2d), e -> true).stream().sorted(Comparator.comparingDouble(_entcnd -> _entcnd.distanceToSqr(_center)))
-						.collect(Collectors.toList());
+				List<Entity> _entfound = world.getEntitiesOfClass(Entity.class, new AABB(_center, _center).inflate(2 / 2d), e -> true).stream().sorted(Comparator.comparingDouble(_entcnd -> _entcnd.distanceToSqr(_center))).toList();
 				for (Entity entityiterator : _entfound) {
 					if (!(entityiterator == user) && entityiterator instanceof LivingEntity) {
-						entityiterator.hurt(DamageSource.ON_FIRE, 3);
-						entityiterator.setSecondsOnFire(8);
+						entityiterator.hurt(new DamageSource(world.holderOrThrow(DamageTypes.ON_FIRE)), 3);
+						entityiterator.igniteForSeconds(8);
 					}
 				}
 			}
