@@ -1,7 +1,5 @@
 package net.mcreator.kraftmine.procedures;
 
-import net.minecraftforge.registries.ForgeRegistries;
-
 import net.minecraft.world.phys.Vec3;
 import net.minecraft.world.phys.AABB;
 import net.minecraft.world.level.block.Blocks;
@@ -14,7 +12,6 @@ import net.minecraft.world.entity.monster.WitherSkeleton;
 import net.minecraft.world.entity.monster.Creeper;
 import net.minecraft.world.entity.monster.Blaze;
 import net.minecraft.world.entity.MobSpawnType;
-import net.minecraft.world.entity.Mob;
 import net.minecraft.world.entity.LivingEntity;
 import net.minecraft.world.entity.LightningBolt;
 import net.minecraft.world.entity.EquipmentSlot;
@@ -22,6 +19,7 @@ import net.minecraft.world.entity.EntityType;
 import net.minecraft.world.entity.Entity;
 import net.minecraft.world.effect.MobEffects;
 import net.minecraft.world.effect.MobEffectInstance;
+import net.minecraft.world.damagesource.DamageTypes;
 import net.minecraft.world.damagesource.DamageSource;
 import net.minecraft.world.InteractionHand;
 import net.minecraft.util.RandomSource;
@@ -30,11 +28,11 @@ import net.minecraft.sounds.SoundSource;
 import net.minecraft.server.level.ServerPlayer;
 import net.minecraft.server.level.ServerLevel;
 import net.minecraft.resources.ResourceLocation;
+import net.minecraft.core.registries.BuiltInRegistries;
 import net.minecraft.core.BlockPos;
 
 import net.mcreator.kraftmine.entity.HerobrineEntity;
 
-import java.util.stream.Collectors;
 import java.util.List;
 import java.util.Comparator;
 import java.util.Calendar;
@@ -60,7 +58,7 @@ public class HerobrineOnEntityTickUpdateProcedure {
 						_serverPlayer.connection.teleport((x + Mth.nextInt(RandomSource.create(), -10, 10)), y, (z + Mth.nextInt(RandomSource.create(), -10, 10)), _ent.getYRot(), _ent.getXRot());
 				}
 			}
-			if ((world.getBlockState(new BlockPos(x, y - 1, z))).getBlock() == Blocks.AIR) {
+			if ((world.getBlockState(BlockPos.containing(x, y - 1, z))).getBlock() == Blocks.AIR) {
 				AirCountdown = AirCountdown + 0.05;
 			}
 			if (AirCountdown == 10) {
@@ -79,26 +77,24 @@ public class HerobrineOnEntityTickUpdateProcedure {
 			}
 			{
 				final Vec3 _center = new Vec3(x, y, z);
-				List<Entity> _entfound = world.getEntitiesOfClass(Entity.class, new AABB(_center, _center).inflate(20 / 2d), e -> true).stream().sorted(Comparator.comparingDouble(_entcnd -> _entcnd.distanceToSqr(_center)))
-						.collect(Collectors.toList());
+				List<Entity> _entfound = world.getEntitiesOfClass(Entity.class, new AABB(_center, _center).inflate(20 / 2d), e -> true).stream().sorted(Comparator.comparingDouble(_entcnd -> _entcnd.distanceToSqr(_center))).toList();
 				for (Entity entityiterator : _entfound) {
 					if (entityiterator instanceof Player) {
 						AttackType = Calendar.getInstance().get(Calendar.SECOND);
 						if (AttackType == 9) {
 							if (Herobrine instanceof LivingEntity _entity)
 								_entity.swing(InteractionHand.MAIN_HAND, true);
-							if (Herobrine instanceof LivingEntity _entity)
-								_entity.addEffect(new MobEffectInstance(MobEffects.MOVEMENT_SLOWDOWN, 30, 255, (false), (false)));
-							if (Herobrine instanceof LivingEntity _entity)
-								_entity.addEffect(new MobEffectInstance(MobEffects.SLOW_FALLING, 30, 2, (false), (false)));
+							if (Herobrine instanceof LivingEntity _entity && !_entity.level().isClientSide())
+								_entity.addEffect(new MobEffectInstance(MobEffects.MOVEMENT_SLOWDOWN, 30, 255, false, false));
+							if (Herobrine instanceof LivingEntity _entity && !_entity.level().isClientSide())
+								_entity.addEffect(new MobEffectInstance(MobEffects.SLOW_FALLING, 30, 2, false, false));
 							if (!(!world.getEntitiesOfClass(WitherSkeleton.class, AABB.ofSize(new Vec3((entityiterator.getX()), (entityiterator.getY()), (entityiterator.getZ())), 5, 5, 5), e -> true).isEmpty())) {
-								for (int index0 = 0; index0 < (int) (4); index0++) {
+								for (int index0 = 0; index0 < 4; index0++) {
 									if (world instanceof ServerLevel _level) {
-										Entity entityToSpawn = new WitherSkeleton(EntityType.WITHER_SKELETON, _level);
-										entityToSpawn.moveTo((entityiterator.getX()), (entityiterator.getY() + 3), (entityiterator.getZ()), world.getRandom().nextFloat() * 360F, 0);
-										if (entityToSpawn instanceof Mob _mobToSpawn)
-											_mobToSpawn.finalizeSpawn(_level, world.getCurrentDifficultyAt(entityToSpawn.blockPosition()), MobSpawnType.MOB_SUMMONED, null, null);
-										world.addFreshEntity(entityToSpawn);
+										Entity entityToSpawn = EntityType.WITHER_SKELETON.spawn(_level, BlockPos.containing(entityiterator.getX(), entityiterator.getY() + 3, entityiterator.getZ()), MobSpawnType.MOB_SUMMONED);
+										if (entityToSpawn != null) {
+											entityToSpawn.setYRot(world.getRandom().nextFloat() * 360F);
+										}
 									}
 								}
 							}
@@ -106,18 +102,17 @@ public class HerobrineOnEntityTickUpdateProcedure {
 						if (AttackType == 19) {
 							if (Herobrine instanceof LivingEntity _entity)
 								_entity.swing(InteractionHand.MAIN_HAND, true);
-							if (Herobrine instanceof LivingEntity _entity)
-								_entity.addEffect(new MobEffectInstance(MobEffects.MOVEMENT_SLOWDOWN, 30, 255, (false), (false)));
-							if (Herobrine instanceof LivingEntity _entity)
-								_entity.addEffect(new MobEffectInstance(MobEffects.SLOW_FALLING, 30, 2, (false), (false)));
+							if (Herobrine instanceof LivingEntity _entity && !_entity.level().isClientSide())
+								_entity.addEffect(new MobEffectInstance(MobEffects.MOVEMENT_SLOWDOWN, 30, 255, false, false));
+							if (Herobrine instanceof LivingEntity _entity && !_entity.level().isClientSide())
+								_entity.addEffect(new MobEffectInstance(MobEffects.SLOW_FALLING, 30, 2, false, false));
 							if (!(!world.getEntitiesOfClass(Blaze.class, AABB.ofSize(new Vec3((entityiterator.getX()), (entityiterator.getY()), (entityiterator.getZ())), 5, 5, 5), e -> true).isEmpty())) {
-								for (int index1 = 0; index1 < (int) (3); index1++) {
+								for (int index1 = 0; index1 < 3; index1++) {
 									if (world instanceof ServerLevel _level) {
-										Entity entityToSpawn = new Blaze(EntityType.BLAZE, _level);
-										entityToSpawn.moveTo((entityiterator.getX()), (entityiterator.getY() + 3), (entityiterator.getZ()), world.getRandom().nextFloat() * 360F, 0);
-										if (entityToSpawn instanceof Mob _mobToSpawn)
-											_mobToSpawn.finalizeSpawn(_level, world.getCurrentDifficultyAt(entityToSpawn.blockPosition()), MobSpawnType.MOB_SUMMONED, null, null);
-										world.addFreshEntity(entityToSpawn);
+										Entity entityToSpawn = EntityType.BLAZE.spawn(_level, BlockPos.containing(entityiterator.getX(), entityiterator.getY() + 3, entityiterator.getZ()), MobSpawnType.MOB_SUMMONED);
+										if (entityToSpawn != null) {
+											entityToSpawn.setYRot(world.getRandom().nextFloat() * 360F);
+										}
 									}
 								}
 							}
@@ -125,73 +120,72 @@ public class HerobrineOnEntityTickUpdateProcedure {
 						if (AttackType == 29) {
 							if (Herobrine instanceof LivingEntity _entity)
 								_entity.swing(InteractionHand.MAIN_HAND, true);
-							if (Herobrine instanceof LivingEntity _entity)
-								_entity.addEffect(new MobEffectInstance(MobEffects.MOVEMENT_SLOWDOWN, 30, 255, (false), (false)));
-							if (Herobrine instanceof LivingEntity _entity)
-								_entity.addEffect(new MobEffectInstance(MobEffects.SLOW_FALLING, 30, 2, (false), (false)));
-							entityiterator.hurt(DamageSource.GENERIC, 4);
+							if (Herobrine instanceof LivingEntity _entity && !_entity.level().isClientSide())
+								_entity.addEffect(new MobEffectInstance(MobEffects.MOVEMENT_SLOWDOWN, 30, 255, false, false));
+							if (Herobrine instanceof LivingEntity _entity && !_entity.level().isClientSide())
+								_entity.addEffect(new MobEffectInstance(MobEffects.SLOW_FALLING, 30, 2, false, false));
+							entityiterator.hurt(new DamageSource(world.holderOrThrow(DamageTypes.GENERIC)), 4);
 							if (world instanceof Level _level) {
 								if (!_level.isClientSide()) {
-									_level.playSound(null, new BlockPos(x, y, z), ForgeRegistries.SOUND_EVENTS.getValue(new ResourceLocation("entity.parrot.imitate.wither")), SoundSource.HOSTILE, 1, 1);
+									_level.playSound(null, BlockPos.containing(x, y, z), BuiltInRegistries.SOUND_EVENT.get(ResourceLocation.parse("entity.parrot.imitate.wither")), SoundSource.HOSTILE, 1, 1);
 								} else {
-									_level.playLocalSound(x, y, z, ForgeRegistries.SOUND_EVENTS.getValue(new ResourceLocation("entity.parrot.imitate.wither")), SoundSource.HOSTILE, 1, 1, false);
+									_level.playLocalSound(x, y, z, BuiltInRegistries.SOUND_EVENT.get(ResourceLocation.parse("entity.parrot.imitate.wither")), SoundSource.HOSTILE, 1, 1, false);
 								}
 							}
 						}
 						if (AttackType == 39) {
 							if (Herobrine instanceof LivingEntity _entity)
 								_entity.swing(InteractionHand.MAIN_HAND, true);
-							if (Herobrine instanceof LivingEntity _entity)
-								_entity.addEffect(new MobEffectInstance(MobEffects.MOVEMENT_SLOWDOWN, 30, 255, (false), (false)));
-							if (Herobrine instanceof LivingEntity _entity)
-								_entity.addEffect(new MobEffectInstance(MobEffects.SLOW_FALLING, 30, 2, (false), (false)));
-							if (entityiterator instanceof LivingEntity _entity)
+							if (Herobrine instanceof LivingEntity _entity && !_entity.level().isClientSide())
+								_entity.addEffect(new MobEffectInstance(MobEffects.MOVEMENT_SLOWDOWN, 30, 255, false, false));
+							if (Herobrine instanceof LivingEntity _entity && !_entity.level().isClientSide())
+								_entity.addEffect(new MobEffectInstance(MobEffects.SLOW_FALLING, 30, 2, false, false));
+							if (entityiterator instanceof LivingEntity _entity && !_entity.level().isClientSide())
 								_entity.addEffect(new MobEffectInstance(MobEffects.WITHER, 200, 1));
-							if (entityiterator instanceof LivingEntity _entity)
+							if (entityiterator instanceof LivingEntity _entity && !_entity.level().isClientSide())
 								_entity.addEffect(new MobEffectInstance(MobEffects.BLINDNESS, 100, 1));
-							entityiterator.setSecondsOnFire(5);
+							entityiterator.igniteForSeconds(5);
 						}
 						if (AttackType == 49) {
 							if (Herobrine instanceof LivingEntity _entity)
 								_entity.swing(InteractionHand.MAIN_HAND, true);
-							if (Herobrine instanceof LivingEntity _entity)
-								_entity.addEffect(new MobEffectInstance(MobEffects.MOVEMENT_SLOWDOWN, 30, 255, (false), (false)));
-							if (Herobrine instanceof LivingEntity _entity)
-								_entity.addEffect(new MobEffectInstance(MobEffects.SLOW_FALLING, 30, 2, (false), (false)));
-							if (entityiterator instanceof LivingEntity _entity)
+							if (Herobrine instanceof LivingEntity _entity && !_entity.level().isClientSide())
+								_entity.addEffect(new MobEffectInstance(MobEffects.MOVEMENT_SLOWDOWN, 30, 255, false, false));
+							if (Herobrine instanceof LivingEntity _entity && !_entity.level().isClientSide())
+								_entity.addEffect(new MobEffectInstance(MobEffects.SLOW_FALLING, 30, 2, false, false));
+							if (entityiterator instanceof LivingEntity _entity && !_entity.level().isClientSide())
 								_entity.addEffect(new MobEffectInstance(MobEffects.LEVITATION, 20, 8));
 							if (world instanceof Level _level) {
 								if (!_level.isClientSide()) {
-									_level.playSound(null, new BlockPos(x, y, z), ForgeRegistries.SOUND_EVENTS.getValue(new ResourceLocation("entity.ravager.celebrate")), SoundSource.HOSTILE, 1, 1);
+									_level.playSound(null, BlockPos.containing(x, y, z), BuiltInRegistries.SOUND_EVENT.get(ResourceLocation.parse("entity.ravager.celebrate")), SoundSource.HOSTILE, 1, 1);
 								} else {
-									_level.playLocalSound(x, y, z, ForgeRegistries.SOUND_EVENTS.getValue(new ResourceLocation("entity.ravager.celebrate")), SoundSource.HOSTILE, 1, 1, false);
+									_level.playLocalSound(x, y, z, BuiltInRegistries.SOUND_EVENT.get(ResourceLocation.parse("entity.ravager.celebrate")), SoundSource.HOSTILE, 1, 1, false);
 								}
 							}
 						}
 						if (AttackType == 59) {
 							if (Herobrine instanceof LivingEntity _entity)
 								_entity.swing(InteractionHand.MAIN_HAND, true);
-							if (Herobrine instanceof LivingEntity _entity)
-								_entity.addEffect(new MobEffectInstance(MobEffects.MOVEMENT_SLOWDOWN, 30, 255, (false), (false)));
-							if (Herobrine instanceof LivingEntity _entity)
-								_entity.addEffect(new MobEffectInstance(MobEffects.SLOW_FALLING, 30, 2, (false), (false)));
-							if (entityiterator instanceof LivingEntity _entity)
+							if (Herobrine instanceof LivingEntity _entity && !_entity.level().isClientSide())
+								_entity.addEffect(new MobEffectInstance(MobEffects.MOVEMENT_SLOWDOWN, 30, 255, false, false));
+							if (Herobrine instanceof LivingEntity _entity && !_entity.level().isClientSide())
+								_entity.addEffect(new MobEffectInstance(MobEffects.SLOW_FALLING, 30, 2, false, false));
+							if (entityiterator instanceof LivingEntity _entity && !_entity.level().isClientSide())
 								_entity.addEffect(new MobEffectInstance(MobEffects.WEAKNESS, 100, 2));
 							if (world instanceof Level _level) {
 								if (!_level.isClientSide()) {
-									_level.playSound(null, new BlockPos(x, y, z), ForgeRegistries.SOUND_EVENTS.getValue(new ResourceLocation("entity.wither.ambient")), SoundSource.HOSTILE, 1, 1);
+									_level.playSound(null, BlockPos.containing(x, y, z), BuiltInRegistries.SOUND_EVENT.get(ResourceLocation.parse("entity.wither.ambient")), SoundSource.HOSTILE, 1, 1);
 								} else {
-									_level.playLocalSound(x, y, z, ForgeRegistries.SOUND_EVENTS.getValue(new ResourceLocation("entity.wither.ambient")), SoundSource.HOSTILE, 1, 1, false);
+									_level.playLocalSound(x, y, z, BuiltInRegistries.SOUND_EVENT.get(ResourceLocation.parse("entity.wither.ambient")), SoundSource.HOSTILE, 1, 1, false);
 								}
 							}
 							if (!(!world.getEntitiesOfClass(Creeper.class, AABB.ofSize(new Vec3((entityiterator.getX()), (entityiterator.getY()), (entityiterator.getZ())), 5, 5, 5), e -> true).isEmpty())) {
-								for (int index2 = 0; index2 < (int) (1); index2++) {
+								for (int index2 = 0; index2 < 1; index2++) {
 									if (world instanceof ServerLevel _level) {
-										Entity entityToSpawn = new Creeper(EntityType.CREEPER, _level);
-										entityToSpawn.moveTo((entityiterator.getX()), (entityiterator.getY() + 1), (entityiterator.getZ() + 2), world.getRandom().nextFloat() * 360F, 0);
-										if (entityToSpawn instanceof Mob _mobToSpawn)
-											_mobToSpawn.finalizeSpawn(_level, world.getCurrentDifficultyAt(entityToSpawn.blockPosition()), MobSpawnType.MOB_SUMMONED, null, null);
-										world.addFreshEntity(entityToSpawn);
+										Entity entityToSpawn = EntityType.CREEPER.spawn(_level, BlockPos.containing(entityiterator.getX(), entityiterator.getY() + 1, entityiterator.getZ() + 2), MobSpawnType.MOB_SUMMONED);
+										if (entityToSpawn != null) {
+											entityToSpawn.setYRot(world.getRandom().nextFloat() * 360F);
+										}
 									}
 								}
 							}
@@ -238,8 +232,7 @@ public class HerobrineOnEntityTickUpdateProcedure {
 					if (entityiterator instanceof Creeper) {
 						if (world instanceof ServerLevel _level) {
 							LightningBolt entityToSpawn = EntityType.LIGHTNING_BOLT.create(_level);
-							entityToSpawn.moveTo(Vec3.atBottomCenterOf(new BlockPos(x, y, z)));
-							entityToSpawn.setVisualOnly(false);
+							entityToSpawn.moveTo(Vec3.atBottomCenterOf(BlockPos.containing(x, y, z)));;
 							_level.addFreshEntity(entityToSpawn);
 						}
 					}
