@@ -1,20 +1,18 @@
 package net.mcreator.kraftmine.procedures;
 
-import net.minecraftforge.registries.ForgeRegistries;
-import net.minecraftforge.fml.common.Mod;
-import net.minecraftforge.eventbus.api.SubscribeEvent;
-import net.minecraftforge.eventbus.api.Event;
-import net.minecraftforge.event.level.BlockEvent;
+import net.neoforged.neoforge.event.level.BlockEvent;
+import net.neoforged.fml.common.EventBusSubscriber;
+import net.neoforged.bus.api.SubscribeEvent;
+import net.neoforged.bus.api.Event;
 
 import net.minecraft.world.phys.Vec3;
 import net.minecraft.world.phys.AABB;
 import net.minecraft.world.level.block.Blocks;
+import net.minecraft.world.level.WorldGenLevel;
 import net.minecraft.world.level.LevelAccessor;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.entity.MobSpawnType;
-import net.minecraft.world.entity.Mob;
 import net.minecraft.world.entity.LivingEntity;
-import net.minecraft.world.entity.LightningBolt;
 import net.minecraft.world.entity.EntityType;
 import net.minecraft.world.entity.Entity;
 import net.minecraft.world.effect.MobEffects;
@@ -23,7 +21,8 @@ import net.minecraft.sounds.SoundSource;
 import net.minecraft.server.level.ServerLevel;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.resources.ResourceKey;
-import net.minecraft.core.Registry;
+import net.minecraft.core.registries.Registries;
+import net.minecraft.core.registries.BuiltInRegistries;
 import net.minecraft.core.BlockPos;
 
 import net.mcreator.kraftmine.init.KraftmineModEntities;
@@ -32,11 +31,10 @@ import net.mcreator.kraftmine.KraftmineMod;
 
 import javax.annotation.Nullable;
 
-import java.util.stream.Collectors;
 import java.util.List;
 import java.util.Comparator;
 
-@Mod.EventBusSubscriber
+@EventBusSubscriber
 public class HerobrineSpawnProcedure {
 	@SubscribeEvent
 	public static void onBlockPlace(BlockEvent.EntityPlaceEvent event) {
@@ -50,71 +48,62 @@ public class HerobrineSpawnProcedure {
 	private static void execute(@Nullable Event event, LevelAccessor world, double x, double y, double z, Entity entity) {
 		if (entity == null)
 			return;
-		if (((world instanceof Level _lvl ? _lvl.dimension() : Level.OVERWORLD) == (Level.NETHER)
-				|| (world instanceof Level _lvl ? _lvl.dimension() : Level.OVERWORLD) == (ResourceKey.create(Registry.DIMENSION_REGISTRY, new ResourceLocation("kraftmine:backrooms"))))
-				&& (world.getBlockState(new BlockPos(x, y, z))).getBlock() == Blocks.SOUL_FIRE) {
-			if ((world.getBlockState(new BlockPos(x, y - 1, z))).getBlock() == Blocks.SOUL_SOIL && (world.getBlockState(new BlockPos(x, y - 2, z))).getBlock() == Blocks.PLAYER_HEAD
-					&& (world.getBlockState(new BlockPos(x - 1, y - 2, z))).getBlock() == Blocks.GILDED_BLACKSTONE && (world.getBlockState(new BlockPos(x + 1, y - 2, z))).getBlock() == Blocks.GILDED_BLACKSTONE
-					&& (world.getBlockState(new BlockPos(x, y - 2, z - 1))).getBlock() == Blocks.GILDED_BLACKSTONE && (world.getBlockState(new BlockPos(x, y - 2, z + 1))).getBlock() == Blocks.GILDED_BLACKSTONE
-					&& (world.getBlockState(new BlockPos(x + 1, y - 2, z - 1))).getBlock() == Blocks.GILDED_BLACKSTONE && (world.getBlockState(new BlockPos(x - 1, y - 2, z + 1))).getBlock() == Blocks.GILDED_BLACKSTONE
-					&& (world.getBlockState(new BlockPos(x - 1, y - 2, z - 1))).getBlock() == Blocks.GILDED_BLACKSTONE && (world.getBlockState(new BlockPos(x + 1, y - 2, z + 1))).getBlock() == Blocks.GILDED_BLACKSTONE
-					&& (world.getBlockState(new BlockPos(x - 1, y - 1, z + 1))).getBlock() == Blocks.RED_CANDLE && (world.getBlockState(new BlockPos(x + 1, y - 1, z - 1))).getBlock() == Blocks.RED_CANDLE
-					&& (world.getBlockState(new BlockPos(x - 1, y - 1, z - 1))).getBlock() == Blocks.RED_CANDLE && (world.getBlockState(new BlockPos(x + 1, y - 1, z + 1))).getBlock() == Blocks.RED_CANDLE) {
+		if (((world instanceof Level _lvl ? _lvl.dimension() : (world instanceof WorldGenLevel _wgl ? _wgl.getLevel().dimension() : Level.OVERWORLD)) == Level.NETHER
+				|| (world instanceof Level _lvl ? _lvl.dimension() : (world instanceof WorldGenLevel _wgl ? _wgl.getLevel().dimension() : Level.OVERWORLD)) == ResourceKey.create(Registries.DIMENSION, ResourceLocation.parse("kraftmine:backrooms")))
+				&& (world.getBlockState(BlockPos.containing(x, y, z))).getBlock() == Blocks.SOUL_FIRE) {
+			if ((world.getBlockState(BlockPos.containing(x, y - 1, z))).getBlock() == Blocks.SOUL_SOIL && (world.getBlockState(BlockPos.containing(x, y - 2, z))).getBlock() == Blocks.PLAYER_HEAD
+					&& (world.getBlockState(BlockPos.containing(x - 1, y - 2, z))).getBlock() == Blocks.GILDED_BLACKSTONE && (world.getBlockState(BlockPos.containing(x + 1, y - 2, z))).getBlock() == Blocks.GILDED_BLACKSTONE
+					&& (world.getBlockState(BlockPos.containing(x, y - 2, z - 1))).getBlock() == Blocks.GILDED_BLACKSTONE && (world.getBlockState(BlockPos.containing(x, y - 2, z + 1))).getBlock() == Blocks.GILDED_BLACKSTONE
+					&& (world.getBlockState(BlockPos.containing(x + 1, y - 2, z - 1))).getBlock() == Blocks.GILDED_BLACKSTONE && (world.getBlockState(BlockPos.containing(x - 1, y - 2, z + 1))).getBlock() == Blocks.GILDED_BLACKSTONE
+					&& (world.getBlockState(BlockPos.containing(x - 1, y - 2, z - 1))).getBlock() == Blocks.GILDED_BLACKSTONE && (world.getBlockState(BlockPos.containing(x + 1, y - 2, z + 1))).getBlock() == Blocks.GILDED_BLACKSTONE
+					&& (world.getBlockState(BlockPos.containing(x - 1, y - 1, z + 1))).getBlock() == Blocks.RED_CANDLE && (world.getBlockState(BlockPos.containing(x + 1, y - 1, z - 1))).getBlock() == Blocks.RED_CANDLE
+					&& (world.getBlockState(BlockPos.containing(x - 1, y - 1, z - 1))).getBlock() == Blocks.RED_CANDLE && (world.getBlockState(BlockPos.containing(x + 1, y - 1, z + 1))).getBlock() == Blocks.RED_CANDLE) {
 				if (world instanceof Level _level) {
 					if (!_level.isClientSide()) {
-						_level.playSound(null, new BlockPos(x, y, z), ForgeRegistries.SOUND_EVENTS.getValue(new ResourceLocation("block.end_portal.spawn")), SoundSource.NEUTRAL, 1, 1);
+						_level.playSound(null, BlockPos.containing(x, y, z), BuiltInRegistries.SOUND_EVENT.get(ResourceLocation.parse("block.end_portal.spawn")), SoundSource.NEUTRAL, 1, 1);
 					} else {
-						_level.playLocalSound(x, y, z, ForgeRegistries.SOUND_EVENTS.getValue(new ResourceLocation("block.end_portal.spawn")), SoundSource.NEUTRAL, 1, 1, false);
+						_level.playLocalSound(x, y, z, BuiltInRegistries.SOUND_EVENT.get(ResourceLocation.parse("block.end_portal.spawn")), SoundSource.NEUTRAL, 1, 1, false);
 					}
 				}
-				world.setBlock(new BlockPos(x, y, z), Blocks.AIR.defaultBlockState(), 3);
-				world.setBlock(new BlockPos(x, y - 1, z), Blocks.AIR.defaultBlockState(), 3);
-				world.setBlock(new BlockPos(x, y - 2, z), Blocks.AIR.defaultBlockState(), 3);
-				world.setBlock(new BlockPos(x - 1, y - 2, z), Blocks.AIR.defaultBlockState(), 3);
-				world.setBlock(new BlockPos(x + 1, y - 2, z), Blocks.AIR.defaultBlockState(), 3);
-				world.setBlock(new BlockPos(x, y - 2, z - 1), Blocks.AIR.defaultBlockState(), 3);
-				world.setBlock(new BlockPos(x, y - 2, z + 1), Blocks.AIR.defaultBlockState(), 3);
-				world.setBlock(new BlockPos(x + 1, y - 2, z - 1), Blocks.AIR.defaultBlockState(), 3);
-				world.setBlock(new BlockPos(x - 1, y - 2, z + 1), Blocks.AIR.defaultBlockState(), 3);
-				world.setBlock(new BlockPos(x - 1, y - 2, z - 1), Blocks.AIR.defaultBlockState(), 3);
-				world.setBlock(new BlockPos(x + 1, y - 2, z + 1), Blocks.AIR.defaultBlockState(), 3);
-				world.setBlock(new BlockPos(x - 1, y - 2, z + 1), Blocks.AIR.defaultBlockState(), 3);
-				world.setBlock(new BlockPos(x + 1, y - 2, z - 1), Blocks.AIR.defaultBlockState(), 3);
-				world.setBlock(new BlockPos(x - 1, y - 2, z - 1), Blocks.AIR.defaultBlockState(), 3);
-				world.setBlock(new BlockPos(x + 1, y - 2, z + 1), Blocks.AIR.defaultBlockState(), 3);
+				world.setBlock(BlockPos.containing(x, y, z), Blocks.AIR.defaultBlockState(), 3);
+				world.setBlock(BlockPos.containing(x, y - 1, z), Blocks.AIR.defaultBlockState(), 3);
+				world.setBlock(BlockPos.containing(x, y - 2, z), Blocks.AIR.defaultBlockState(), 3);
+				world.setBlock(BlockPos.containing(x - 1, y - 2, z), Blocks.AIR.defaultBlockState(), 3);
+				world.setBlock(BlockPos.containing(x + 1, y - 2, z), Blocks.AIR.defaultBlockState(), 3);
+				world.setBlock(BlockPos.containing(x, y - 2, z - 1), Blocks.AIR.defaultBlockState(), 3);
+				world.setBlock(BlockPos.containing(x, y - 2, z + 1), Blocks.AIR.defaultBlockState(), 3);
+				world.setBlock(BlockPos.containing(x + 1, y - 2, z - 1), Blocks.AIR.defaultBlockState(), 3);
+				world.setBlock(BlockPos.containing(x - 1, y - 2, z + 1), Blocks.AIR.defaultBlockState(), 3);
+				world.setBlock(BlockPos.containing(x - 1, y - 2, z - 1), Blocks.AIR.defaultBlockState(), 3);
+				world.setBlock(BlockPos.containing(x + 1, y - 2, z + 1), Blocks.AIR.defaultBlockState(), 3);
+				world.setBlock(BlockPos.containing(x - 1, y - 2, z + 1), Blocks.AIR.defaultBlockState(), 3);
+				world.setBlock(BlockPos.containing(x + 1, y - 2, z - 1), Blocks.AIR.defaultBlockState(), 3);
+				world.setBlock(BlockPos.containing(x - 1, y - 2, z - 1), Blocks.AIR.defaultBlockState(), 3);
+				world.setBlock(BlockPos.containing(x + 1, y - 2, z + 1), Blocks.AIR.defaultBlockState(), 3);
 				KraftmineMod.queueServerWork(15, () -> {
-					for (int index0 = 0; index0 < (int) (10); index0++) {
+					for (int index0 = 0; index0 < 10; index0++) {
 						if (world instanceof ServerLevel _level) {
-							Entity entityToSpawn = new LightningBolt(EntityType.LIGHTNING_BOLT, _level);
-							entityToSpawn.moveTo(x, y, z, 0, 0);
-							entityToSpawn.setYBodyRot(0);
-							entityToSpawn.setYHeadRot(0);
-							entityToSpawn.setDeltaMovement(0, 0, 0);
-							if (entityToSpawn instanceof Mob _mobToSpawn)
-								_mobToSpawn.finalizeSpawn(_level, world.getCurrentDifficultyAt(entityToSpawn.blockPosition()), MobSpawnType.MOB_SUMMONED, null, null);
-							world.addFreshEntity(entityToSpawn);
+							Entity entityToSpawn = EntityType.LIGHTNING_BOLT.spawn(_level, BlockPos.containing(x, y, z), MobSpawnType.MOB_SUMMONED);
+							if (entityToSpawn != null) {
+								entityToSpawn.setDeltaMovement(0, 0, 0);
+							}
 						}
 					}
 					KraftmineMod.queueServerWork(55, () -> {
 						if (world instanceof ServerLevel _level) {
-							Entity entityToSpawn = new HerobrineEntity(KraftmineModEntities.HEROBRINE.get(), _level);
-							entityToSpawn.moveTo(x, (y + 2), z, 0, 0);
-							entityToSpawn.setYBodyRot(0);
-							entityToSpawn.setYHeadRot(0);
-							entityToSpawn.setDeltaMovement(0, 0, 0);
-							if (entityToSpawn instanceof Mob _mobToSpawn)
-								_mobToSpawn.finalizeSpawn(_level, world.getCurrentDifficultyAt(entityToSpawn.blockPosition()), MobSpawnType.MOB_SUMMONED, null, null);
-							world.addFreshEntity(entityToSpawn);
+							Entity entityToSpawn = KraftmineModEntities.HEROBRINE.get().spawn(_level, BlockPos.containing(x, y + 2, z), MobSpawnType.MOB_SUMMONED);
+							if (entityToSpawn != null) {
+								entityToSpawn.setDeltaMovement(0, 0, 0);
+							}
 						}
 						{
 							final Vec3 _center = new Vec3(x, y, z);
-							List<Entity> _entfound = world.getEntitiesOfClass(Entity.class, new AABB(_center, _center).inflate(2 / 2d), e -> true).stream().sorted(Comparator.comparingDouble(_entcnd -> _entcnd.distanceToSqr(_center)))
-									.collect(Collectors.toList());
+							List<Entity> _entfound = world.getEntitiesOfClass(Entity.class, new AABB(_center, _center).inflate(2 / 2d), e -> true).stream().sorted(Comparator.comparingDouble(_entcnd -> _entcnd.distanceToSqr(_center))).toList();
 							for (Entity entityiterator : _entfound) {
 								if (entityiterator instanceof HerobrineEntity) {
-									if (entity instanceof LivingEntity _entity)
+									if (entity instanceof LivingEntity _entity && !_entity.level().isClientSide())
 										_entity.addEffect(new MobEffectInstance(MobEffects.SLOW_FALLING, 60, 255));
-									if (entity instanceof LivingEntity _entity)
+									if (entity instanceof LivingEntity _entity && !_entity.level().isClientSide())
 										_entity.addEffect(new MobEffectInstance(MobEffects.GLOWING, 20, 1));
 								}
 							}
